--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Get Tennis Alerts For Upcoming Tennis Matches</title>
+    <title>gettennisalerts.com - Get Tennis Alerts For Upcoming Tennis Matches</title>
   </head>
   <body>
     <noscript>
